# src/controllers/auth/story.controller.js
@@ -1,0 +1,37 @@
+const { PrismaClient }=require("@prisma/client");
+const prisma=new PrismaClient()
+
+export const createStory=async (req,res)=>{
+    try{
+            await prisma.story.create({
+            typeId:req.body.typeId,
+            postedBy:req.body.accountId,   
+            community:req.body.communitId
+        })
+    }
+    catch(error){
+        console.log(error)
+        res.status(403).send("unable to create a story")
+    }
+}
+
+export const loadStory=async (req,res)=>{
+    try{
+        let posts=await prisma.story.findAll()
+        res.status(200).send(posts)
+    }
+    catch(error){
+        res.status(500).send("no posts found")
+    }
+}
+export const loadWithStoryId=async(req,res)=>{
+    try{
+        const story=await prisma.story.find({where:{storyId:req.body.storyId}})
+        res.status(200).send(story)
+    }
+    catch{
+        res.status(500).send("story unavailable")
+    }
+    
+
+}
